# bookalign

./: .gitignore  AGENTS.md  DESIGN.md  EPUB_EXTRACTION.md  EXTRACTION_REFACTOR.md  README.md  STATUS.md  TECHNICAL.md  TESTING.md  compare.md  done.md  main.py  pyproject.toml  pytest.ini
bookalign/: __init__.py  alignment_json.py  api.py  cli.py  extraction_json.py  pipeline.py
bookalign/align/: __init__.py  aligner.py  (+4 more)
books/: Don Quijote de la Mancha (Edicion del IV Centenario) (Spanish Edition) (Miguel de Cervantes, Real Academia Española) (z-library.sk, 1lib.sk, z-lib.sk).epub  Jane Austen (Jane Austen) (z-library.sk, 1lib.sk, z-lib.sk).epub  Marianela (Benito Pérez Galdós) (z-library.sk, 1lib.sk, z-lib.sk).epub  Rimas y leyendas (Gustavo Adolfo Becquer) (z-library.sk, 1lib.sk, z-lib.sk).epub  THE ADVENTURES OF SHERLOCK HOLMES by ARTHUR CONAN DOYLE (The Adventures Of Sherlock Holmes) (z-library.sk, 1lib.sk, z-lib.sk).epub  her.epub  kinkaku.epub  人間失格 (太宰 治) (z-library.sk, 1lib.sk, z-lib.sk).epub
epub/: bookalign_cfi_v1.py  bookalign_cfi_v2.py  cfi_parser.py  ebooklibtest.ipynb  epubcfi.py  read_book.py  xml_ns.json
examples/: README.md  呼啸山庄.epub  金阁寺-段落.epub
pipelines/: __init__.py  extract_japanese_vocabulary.py
scripts/: prepare_bertalign_env.sh  test_bertalign_runtime.py
skill/: SKILL.md  __init__.py  alignment_json.py  extraction_json.py  pipeline.py  production.py  service.py
tests/: test_aligner.py  test_alignment_json.py  test_api.py  test_builder.py  test_extractor.py  test_japanese_vocabulary_pipeline.py  test_pipeline.py  test_splitter.py
(+83 files in other folders)
