[project]
name = "bookalign"
version = "0.1.0"
description = "Align an original EPUB and its translation into a bilingual EPUB for parallel reading."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ebooklib>=0.20",
    "lxml>=5.0",
    "pysbd>=0.3.4",
]

[project.scripts]
bookalign = "bookalign.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
align = [
    "faiss-cpu>=1.8",
    "googletrans==4.0.0rc1",
    "numba>=0.59",
    "numpy>=1.26",
    "sentence-splitter>=1.4",
    "sentence-transformers>=3.0",
    "torch>=2.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests that read real EPUB fixtures",
]
